# fauxchat

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  messages.txt  package.json  pnpm-lock.yaml  postcss.config.js  renovate.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: irc.rs  main.rs  routes.rs
commands/: Cargo.toml  grammar.pest
commands/src/: grammar.rs  lib.rs
libs/chat_scripts/: Cargo.toml
libs/chat_scripts/examples/: main.js  main.rs  secondary_module.js
libs/chat_scripts/src/: lib.rs  loader.rs  ops.rs
libs/chat_scripts/src/js/: runtime.js
libs/commands/: Cargo.toml  grammar.pest
libs/commands/src/: amount.rs  grammar.rs  lib.rs
libs/faker/: Cargo.toml
libs/faker/src/: irc.rs  lib.rs  main.rs
libs/lock/: Cargo.toml
libs/lock/src/: lib.rs
libs/twitch/: Cargo.toml  build.rs
libs/twitch/src/: creds.rs  lib.rs  main.rs
libs/usergen/: Cargo.toml
libs/usergen/src/: lib.rs
patches/: jChat.patch
scripts/: credentials.py  parse_cmdir.py  randomise_pool.js
src/: App.module.scss  App.tsx  command.rs  creds.rs  globals.css  irc.rs  lib.rs  main.rs  main.tsx  styles.scss  twitch_api.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: irc.rs  main.rs  net.rs  routes.rs  tcmds.rs
src/App/: index.module.css  index.module.scss  index.tsx
src/Chat/: index.module.scss  index.tsx
twitch/: Cargo.toml  build.rs
twitch/src/: creds.rs
twitch/src/creds/: decl.rs
usergen/: Cargo.toml
usergen/src/: lib.rs
usernames/: Cargo.toml  dataset.py
