[workspace]
members = ["libs/*", "src-tauri"]

[workspace.dependencies]
anyhow = "1.0.71"
toml = "0.7.3"
serde = { version = "1.0.163", features = ["derive"] }
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = "0.12.1"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
tracing = "0.1.37"
rayon = "1.7.0"