[workspace]
members = ["libs/*", "src-tauri"]

[workspace.dependencies]
anyhow = "1.0.75"
toml = "0.7.6"
serde = { version = "1.0.188", features = ["derive"] }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
tracing = "0.1.37"
rayon = "1.7.0"
thiserror = "1.0.47"
