[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
const_format = "0.2.30"
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["json"] }
rotenv_codegen = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

faker = { path = "../libs/faker" }
include_dir = "0.7.3"
once_cell = { version = "1.17.1", features = ["parking_lot"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
