[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT AND Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
rayon = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
include_dir = "0.7.3"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

faker = { path = "../libs/faker" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
