[package]
name = "app"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = "MIT AND Apache-2.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["dialog-open", "shell-open"] }
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
tracing-subscriber = "0.3.17"
crossbeam = "0.8.2"
include_dir = "0.7.3"
time = "0.3.23"
directories = "5.0.1"

thiserror = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

twitch_api = { path = "../libs/twitch" }
usergen = { path = "../libs/usergen" }
commands = { path = "../libs/commands" }
lock = { path = "../libs/lock" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
