[package]
name = "chat_scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.29.5", features = ["transpiling"] }
deno_runtime = "0.128"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
