[package]
name = "commands"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litrs = "0.4.0"
pest = "2.6.0"
pest_derive = "2.6.0"
thiserror = "1.0.40"

anyhow = { workspace = true }
