[package]
name = "faker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
const_format = "0.2.30"
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
parking_lot = "0.12.1"

twitch_api = { path = "../twitch" }
usergen = { path = "../usergen" }
commands = { path = "../commands" }
once_cell = { version = "1.17.1", features = ["parking_lot"] }