[package]
name = "faker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
thiserror = "1.0.40"
tracing = "0.1.37"

anyhow = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }

twitch_api = { path = "../twitch" }
usergen = { path = "../usergen" }
commands = { path = "../commands" }