[package]
name = "twitch_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }

usergen = { path = "../usergen" }
const_format = "0.2.30"
anyhow = "1.0.71"
directories = "5.0.1"
toml = "0.7.3"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
parking_lot = "0.12.1"
once_cell = { version = "1.17.1", features = ["parking_lot"] }

[build-dependencies]
dunce = "1.0.4"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
