[package]
name = "twitch_api"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
const_format = "0.2.32"
directories = "5.0.1"

rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

usergen = { path = "../usergen" }

[build-dependencies]
dunce = "1.0.4"
serde = { workspace = true }
toml = { workspace = true }
