[package]
name = "usergen"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai = { version = "1.0.0-alpha.10", features = ["reqwest"] }

serde = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
